--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "express": "^4.19.2"
   },
   "engines": {
     "node": "18.x"
