--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "deadly-global-chat",
+  "name": "deadly-chat-backend",
   "version": "1.0.0",
-  "description": "Global chat API for Roblox",
-  "main": "index.js",
+  "description": "Rate limited chat backend",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
-  },
-  "engines": {
-    "node": "18.x"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5"
   }
 }
